--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,16 @@ font-family: 'Roboto', sans-serif; */
 }
 
 body {
-	background-image: url(./imgs/StoneWall12.svg);
+	background-color: #b8b8b8;
+	background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23444444' fill-opacity='0.24'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 header {
 	display: flex;
 	justify-content: center;
 	background-color: #8c322a;
-	border-bottom: dotted 1px gold;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ffd700' fill-opacity='0.27' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+	border-bottom: dotted 1px #ffd700;
 }
 
 .header_inner {
@@ -74,7 +76,7 @@ header {
   width: 150px;
 	outline: none;
 	background-position: center;
-	background-color: #8c322a;
+	background-color: rgba(0, 0, 0, 0);
 }
 
 main {
@@ -87,11 +89,12 @@ main {
 
 .Hero {
 	max-width: 100vw;
+	width: 100%;
 }
 
 .beast_list {
 	display: flex;
-	max-width: 100%;
+	max-width: 1200px;
 	width: 100%;
 	flex-flow: row wrap;
 	justify-content: space-around;
@@ -101,7 +104,7 @@ main {
 .card {
 	background-image: url(./imgs/CardBackground.svg);
 	width: 400px;
-	height: 600px;
+	height: 400px;
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -196,24 +199,27 @@ main {
 }
 
 .contribute {
-  background-size: contain;
-  max-width: 800px;
-  height: 600px;
-  background-image: url(./imgs/wood-sign.svg);
-  background-size: cover;
-  padding: 9em 8.5em;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   gap: 1em;
   box-sizing: border-box;
+	max-width: 1200px;
+	width: 100%;
 }
 
 .contribute h2 {
   font-size: 3em;
-  color: #8C322A;
-  text-shadow: 1px 1px 2px black;
+  color: #b8b8b8;
+  text-shadow: 2px 2px 4px black;
+	background-image: url(./imgs/wood-plank.svg);
+	background-size: 100% 100%;
+	background-color: #5d401b;
+	padding: 0.25em 1em;
+	border-radius: 0.25em;
+	background-blend-mode: overlay;
 }
 
 .contribute p {
@@ -237,7 +243,9 @@ footer {
   width: 100vw;
   display: flex;
   justify-content: center;
-  background-color: #819BA6;
+	background-color: #819ba6;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%2370868f' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+	margin-top: 1em;
 }
 
 .footer_inner {
@@ -254,7 +262,20 @@ footer {
   display: flex;
   width: 100%;
   justify-content: space-between;
+	align-items: center;
+}
 
+.support_btn {
+	padding: 0.5em 1em;
+  font-size: 1.25em;
+  background: linear-gradient(90deg, rgba(173,133,93,1) 1%, rgba(220,194,155,1) 10%, rgba(220,194,155,1) 90%, rgba(173,133,93,1) 100%);
+  border-radius: 1em;
+  cursor: pointer;
+  box-shadow: #0d0d0d 1px 1px 5px;
+}
+
+.support_btn:hover {
+  background: linear-gradient(90deg, rgb(150, 115, 79) 1%, rgb(166, 146, 117) 10%, rgb(166, 146, 117) 90%, rgb(150, 115, 79) 100%);
 }
 
 .social_icons {
@@ -269,6 +290,19 @@ footer {
   color:#1a2d34
 }
 
-.footer_bottom {
+i {
+	cursor: pointer;
+}
 
+.footer_bottom {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	gap: 1em;
+  color: #416b7b;
+	font-size: 1.25em;
+}
+
+.footer_bottom i:hover {
+  color:#374f57
 }
