added link to contribute button and some style changes

--- a/src/App.css
+++ b/src/App.css
@@ -308,6 +308,9 @@ main {
 	cursor: pointer;
 	box-shadow: #0d0d0d 1px 1px 5px;
 	transition: all 0.5s ease-out;
+	color: black;
+	display: flex;
+	align-items: center;
 }
 
 .contribute_btn:hover {
@@ -319,6 +322,7 @@ main {
 		rgb(150, 115, 79) 100%
 	);
 	transition-duration: 1s;
+	color: black;
 }
 
 footer {
