--- a/src/App.css
+++ b/src/App.css
@@ -392,7 +392,7 @@ footer {
 .social_icons {
 	display: flex;
 	font-size: 2em;
-	color: #27424d;
+	color: #416b7b;
 	gap: 1em;
 	padding: 1em;
 }
@@ -412,6 +412,9 @@ i {
 	justify-content: center;
 	width: 100%;
 	gap: 1em;
+}
+
+.footer_bottom a, .footer_bottom i {
 	color: #416b7b;
 	font-size: 1.25em;
 }
